# FastGC-icecake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_pack.sh
GPUJPEG/: .gitignore
GPUJPEG/3rd-deps/: icecake
GPUJPEG/libgpujpeg/: gpujpeg.h  gpujpeg_common.h  gpujpeg_decoder.h
GPUJPEG/src/: decode_test.cpp  decoder_helper.cpp  decoder_helper.h  export.h  gpujpeg_common.c  gpujpeg_common_internal.h  gpujpeg_decoder.c  gpujpeg_decoder_internal.h  gpujpeg_huffman_cpu_decoder.c  gpujpeg_huffman_gpu_decoder.cu  gpujpeg_reader.c  gpujpeg_reader.h  gpujpeg_table.c  gpujpeg_table.h  main.c
cmake/: FindNVJPEG.cmake  FindTHRIFT.cmake
include/: JCache.hpp  gpu_decoder.hpp  icecake.hpp  icecake_export.hpp  jpeg_decoder.hpp  jpeg_decoder_def.hpp  jpeg_decoder_export.h
python/: MANIFEST.in  setup.py
python/pyicecake/: DataPipeline.py  __init__.py
scripts/: Playground2.ipynb  dali_extern_source.ipynb  dali_external_source.ipynb  dali_hybrid_test.py  dali_imagenet_main.py  dali_imagenet_main_hybrid.py  dali_loading_time.ipynb  image_crop.ipynb  image_jpegtrans.py  image_metadata.py  image_size.py  imagenet_map2labels.py  img2dali.py  loading_time_stat.ipynb  playground.ipynb  read_bench.py  read_bench_start.py  video_extract_frame.ipynb
scripts/dali-imagenet/: main.py  run-train.sh  run.sh
scripts/resnet50/: main.py
src/: CMakeLists.txt  JCache-python.cpp  JCache.cpp  README.md  gpu_decoder.cpp  hash_tuple.hpp  icecake-python.cpp  icecake.cpp  jpeg_decoder.cpp  jpeg_decoder.hpp  jpeg_decoder_export.cpp  lib.cpp  main.cpp
src/.dali-ops.old/: dali_icecake.cpp
src/cuda/: cuda.cuh  sub.cu
src/dali-ops/: CMakeLists.txt  dali_icecake.cpp  dali_icecake.cu  dali_icecake.h  dali_icecake_gpu.cpp
src/gen-cpp/: JPEGCache.cpp  JPEGCache.h  JPEGCache_constants.cpp  JPEGCache_constants.h  JPEGCache_server.skeleton.cpp  JPEGCache_types.cpp  JPEGCache_types.h
src/python/: icecake.i
src/thrift-idls/: JPEGCache.thrift
src/utils/: chromiumbase64.h  int2bytes.cpp  int2bytes.h
test/: CMakeLists.txt  common.cpp  common.h  cuda_test.cu  metadata_test.py  nvJPEG.cpp  nvjpeg_test.cpp  opencv_test.cpp  rofs.cpp  rpc-thrift-client.cpp  stat.py  test_cupy.py  test_jpeg_decoder.cpp  test_rst_marker.cpp  testlib.cpp  tests.cpp  valgrind_test.cpp
